Kaggle Notebook | IMDB-sentiment | Version 2

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6f9376c",
+   "id": "e056d600",
    "metadata": {
     "papermill": {
-     "duration": 0.002595,
-     "end_time": "2025-09-07T19:09:15.348181",
+     "duration": 0.002603,
+     "end_time": "2025-09-07T19:29:53.654224",
      "exception": false,
-     "start_time": "2025-09-07T19:09:15.345586",
+     "start_time": "2025-09-07T19:29:53.651621",
      "status": "completed"
     },
     "tags": []
@@ -18,21 +18,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61046b2c",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001962,
+     "end_time": "2025-09-07T19:29:53.658606",
+     "exception": false,
+     "start_time": "2025-09-07T19:29:53.656644",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "<div style=\"border: 2px solid #008CBA; border-radius: 10px; padding: 20px; background-color: #f0f8ff; font-family: sans-serif;\">\n",
+    "    <h1 style=\"color: #005f73; border-bottom: 2px solid #005f73; padding-bottom: 10px;\">\n",
+    "        Project Step 1: Data Loading & Initial Exploration\n",
+    "    </h1>\n",
+    "    \n",
+    "<p style=\"font-size: 1.1em; color: #333;\">\n",
+    "        This initial phase is the foundation of our project. The primary goal is to load the IMDb dataset and perform a thorough exploratory data analysis (EDA) to understand its structure, content, and characteristics before any cleaning or modeling.\n",
+    "    </p>\n",
+    "\n",
+    "<h2 style=\"color: #0077b6;\">Key Objectives & Actions</h2>\n",
+    "    \n",
+    "<ol style=\"list-style-type: decimal; padding-left: 20px; font-size: 1.05em; color: #333;\">\n",
+    "        <li style=\"margin-bottom: 15px;\">\n",
+    "            <strong>Environment Setup:</strong>\n",
+    "            <ul style=\"list-style-type: disc; padding-left: 20px; margin-top: 5px;\">\n",
+    "                <li>Imported essential Python libraries: <code>pandas</code> for data manipulation, and <code>matplotlib</code>/<code>seaborn</code> for visualization.</li>\n",
+    "                <li>Set a consistent and readable style for all our plots.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li style=\"margin-bottom: 15px;\">\n",
+    "            <strong>Data Loading:</strong>\n",
+    "            <ul style=\"list-style-type: disc; padding-left: 20px; margin-top: 5px;\">\n",
+    "                <li>Loaded the <code>IMDB Dataset.csv</code> into a pandas DataFrame named <code>df</code>.</li>\n",
+    "                <li>Used a <code>try-except</code> block for robust error handling in case the file path is incorrect.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li style=\"margin-bottom: 15px;\">\n",
+    "            <strong>Initial Data Inspection (Health Check):</strong>\n",
+    "            <ul style=\"list-style-type: disc; padding-left: 20px; margin-top: 5px;\">\n",
+    "                <li>Checked the dataset's dimensions (shape): 50,000 rows and 2 columns.</li>\n",
+    "                <li>Examined the first and last few rows using <code>df.head()</code> and <code>df.tail()</code> to get a qualitative feel for the data.</li>\n",
+    "                <li>Used <code>df.info()</code> to confirm column data types (<code>object</code> for both) and check for non-null counts.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li style=\"margin-bottom: 15px;\">\n",
+    "            <strong>Analysis & Visualization:</strong>\n",
+    "            <ul style=\"list-style-type: disc; padding-left: 20px; margin-top: 5px;\">\n",
+    "                <li><strong>Target Variable Analysis:</strong> Analyzed the <code>sentiment</code> column distribution and confirmed the dataset is perfectly balanced (25,000 positive, 25,000 negative).</li>\n",
+    "                <li><strong>Feature Content Exploration:</strong> Inspected individual raw reviews, noting the presence of HTML tags (<code>&lt;br /&gt;</code>), punctuation, and varied capitalization, which highlights the need for text preprocessing.</li>\n",
+    "                <li><strong>Review Length Analysis:</strong> Calculated and plotted the distribution of review lengths (character count) to check for outliers and compare characteristics between positive and negative reviews.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "    </ol>\n",
+    "\n",
+    "<div style=\"background-color: #e0f2f1; border-left: 5px solid #00897b; padding: 15px; margin-top: 20px;\">\n",
+    "        <h3 style=\"color: #004d40; margin-top: 0;\">Key Findings & Conclusion</h3>\n",
+    "        <p style=\"color: #333; margin: 0;\">\n",
+    "            The dataset is <strong>complete</strong> (no missing values) and <strong>perfectly balanced</strong>, which is ideal for a classification task. The 'review' text is raw and will require a comprehensive cleaning pipeline. We are now well-prepared to proceed to the <strong>Data Cleaning and Preprocessing</strong> step.\n",
+    "        </p>\n",
+    "    </div>\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "741f7ae5",
+   "id": "94edfe8c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-07T19:09:15.353432Z",
-     "iopub.status.busy": "2025-09-07T19:09:15.353123Z",
-     "iopub.status.idle": "2025-09-07T19:09:20.978738Z",
-     "shell.execute_reply": "2025-09-07T19:09:20.977661Z"
+     "iopub.execute_input": "2025-09-07T19:29:53.664250Z",
+     "iopub.status.busy": "2025-09-07T19:29:53.663902Z",
+     "iopub.status.idle": "2025-09-07T19:29:59.330859Z",
+     "shell.execute_reply": "2025-09-07T19:29:59.329828Z"
     },
     "papermill": {
-     "duration": 5.630235,
-     "end_time": "2025-09-07T19:09:20.980450",
+     "duration": 5.672049,
+     "end_time": "2025-09-07T19:29:59.332845",
      "exception": false,
-     "start_time": "2025-09-07T19:09:15.350215",
+     "start_time": "2025-09-07T19:29:53.660796",
      "status": "completed"
     },
     "tags": []
@@ -78,19 +145,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dac481d5",
+   "id": "87f1e7e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-07T19:09:20.986310Z",
-     "iopub.status.busy": "2025-09-07T19:09:20.985955Z",
-     "iopub.status.idle": "2025-09-07T19:09:21.046358Z",
-     "shell.execute_reply": "2025-09-07T19:09:21.045226Z"
+     "iopub.execute_input": "2025-09-07T19:29:59.338799Z",
+     "iopub.status.busy": "2025-09-07T19:29:59.338477Z",
+     "iopub.status.idle": "2025-09-07T19:29:59.397051Z",
+     "shell.execute_reply": "2025-09-07T19:29:59.395689Z"
     },
     "papermill": {
-     "duration": 0.065089,
-     "end_time": "2025-09-07T19:09:21.047918",
+     "duration": 0.063563,
+     "end_time": "2025-09-07T19:29:59.398804",
      "exception": false,
-     "start_time": "2025-09-07T19:09:20.982829",
+     "start_time": "2025-09-07T19:29:59.335241",
      "status": "completed"
     },
     "tags": []
@@ -165,19 +232,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c4e08603",
+   "id": "95f33f2a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-07T19:09:21.053507Z",
-     "iopub.status.busy": "2025-09-07T19:09:21.053191Z",
-     "iopub.status.idle": "2025-09-07T19:09:21.469533Z",
-     "shell.execute_reply": "2025-09-07T19:09:21.468551Z"
+     "iopub.execute_input": "2025-09-07T19:29:59.404788Z",
+     "iopub.status.busy": "2025-09-07T19:29:59.404445Z",
+     "iopub.status.idle": "2025-09-07T19:29:59.835116Z",
+     "shell.execute_reply": "2025-09-07T19:29:59.834049Z"
     },
     "papermill": {
-     "duration": 0.421016,
-     "end_time": "2025-09-07T19:09:21.471203",
+     "duration": 0.435404,
+     "end_time": "2025-09-07T19:29:59.836612",
      "exception": false,
-     "start_time": "2025-09-07T19:09:21.050187",
+     "start_time": "2025-09-07T19:29:59.401208",
      "status": "completed"
     },
     "tags": []
@@ -228,19 +295,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cab14466",
+   "id": "76e50712",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-07T19:09:21.478514Z",
-     "iopub.status.busy": "2025-09-07T19:09:21.478184Z",
-     "iopub.status.idle": "2025-09-07T19:09:22.480402Z",
-     "shell.execute_reply": "2025-09-07T19:09:22.479207Z"
+     "iopub.execute_input": "2025-09-07T19:29:59.843884Z",
+     "iopub.status.busy": "2025-09-07T19:29:59.843561Z",
+     "iopub.status.idle": "2025-09-07T19:30:00.898160Z",
+     "shell.execute_reply": "2025-09-07T19:30:00.897011Z"
     },
     "papermill": {
-     "duration": 1.008214,
-     "end_time": "2025-09-07T19:09:22.482271",
+     "duration": 1.060639,
+     "end_time": "2025-09-07T19:30:00.900187",
      "exception": false,
-     "start_time": "2025-09-07T19:09:21.474057",
+     "start_time": "2025-09-07T19:29:59.839548",
      "status": "completed"
     },
     "tags": []
@@ -368,14 +435,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.364479,
-   "end_time": "2025-09-07T19:09:23.208006",
+   "duration": 14.081711,
+   "end_time": "2025-09-07T19:30:01.728183",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-07T19:09:09.843527",
+   "start_time": "2025-09-07T19:29:47.646472",
    "version": "2.6.0"
   }
  },
